mule-user-guide/v/3.8/microsoft-sharepoint-2013-connector.adoc
=  Microsoft SharePoint 2013连接器
:keywords: anypoint studio, connector, endpoint, microsoft, sharepoint, share point, intranet, online

*Select*

*Latest version: 2.3.0*

Microsoft SharePoint是用于内容和文档管理，Intranet门户，协作，外联网，网站和企业搜索的Web应用程序平台。

Anypoint平台的Microsoft SharePoint连接器通过其REST API实现与SharePoint 2013的集成。

*Release Notes*：
link:/release-notes/microsoft-sharepoint-2013-connector-release-notes[Microsoft SharePoint 2013连接器发行说明]

*Samples*： link:_attachments/sharepoint-connector-samples.zip[sharepoint-connector-samples.zip]

*FAQ*：<<Frequently Asked Questions>>

== 概述

支持的操作：

*  *Lists and List Items API*：创建，删除，检索和更新列表和列表项。
*  *Files and Folders API*：
** 文件：添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝，回收和复制文件。
** 文件夹：创建，删除和检索文件夹。

支持的Microsoft SharePoint版本：

*  Microsoft SharePoint 2013
*  Microsoft SharePoint Online
与Sharepoint Online交互时，不支持**  *FileQuery*和*FolderQuery*操作。

== 认证

Microsoft SharePoint连接器支持基于其的不同身份验证方案
您访问的Microsoft SharePoint：

内部支持的Microsoft SharePoint身份验证：

*  NTLM
* 针对Microsoft ADFS的基于声明的身份验证
* 的Kerberos

支持的Microsoft SharePoint Online身份验证：

*  Microsoft Online（Office 365）管理用户
{Microsoft} Microsoft Online（Office 365）联合用户针对Microsoft ADFS
*  Microsoft Online（Office 365）与Okta联合用户

注意：以上所有连接都可以配置为使用NTLM代理来连接NTLM连接类型和
所有其他类型的HTTP代理

=== 基于声明的身份验证

配置连接器以使用基于声明的身份验证需要来自安全令牌服务（STS）的以下信息用于身份验证：

*  *Sts Url*：接受用户名和密码验证用户并理解WS-Trust 1.3协议的STS端点。当STS是Microsoft的ADFS（Active Directory联合身份验证服务）时，此URL通常是`+https://youradfs.com/adfs/services/trust/13/usernamemixed+`。
*  *Sts App Identifier*：标识STS中Sharepoint网站的字符串。它也被称为依赖方标识符，客户标识符，范围或领域。当STS是Microsoft的ADFS时，可以在AD FS下的AD FS管理控制台的*Trust Relationships*> *Relying Party Trusts*>（Sharepoint站点依赖部件属性）_> *Identifiers*选项卡中发现此值。
+
通过在Web浏览器中打开网站URL，登录到您想要访问的Sharepoint站点，即可获得STS App标识符。如果为一个站点配置了多个身份验证提供程序，则会在下拉菜单中列出这些选项。选择所需的STS重定向到STS的登录页面。此时，Web浏览器的地址栏包含一个URL，其中包含以下查询参数：+
+
`wa=wsignin1.0&wtrealm=uri%3amule%3asp80`
+
参数*_wa_*告诉STS正在启动登录。 *_wtrealm_*包含Sts App标识符的URI编码值。在这个例子中，`uri%3amule%3asp80`是`uri:mule:sp80`。未编码的值是连接器配置的参数。

====  Kerberos身份验证

配置连接器以使用Kerberos身份验证需要以下信息：

*  *Username*：用户进行身份验证。
*  *Password*：用户通过身份验证的密码。
*  *Site URL*：Microsoft SharePoint站点的路径（_https：//sharepoint.myorganization.com/site_）。
*  *Service Principal Name (SPN)*：SPN通常看起来像主机/ SERVER-NAME.MYREALM.COM
*  *Realm*：用户所属的域。请注意，此值区分大小写，并且必须完全按Active Directory中的定义进行指定。
*  *KDC*：密钥分发中心;通常是域控制器（服务器名称或IP）。更多信息，请访问https://msdn.microsoft.com/en-us/library/windows/desktop/aa378170(v=vs.85).aspx
*  *Disable Cn Check*：处理HTTPS证书时，如果证书未由受信任的合作伙伴签名，则服务器可能会响应一个异常。为了防止这一点
可以禁用CN（通用名称）检查。 [下划线] _注意：_这不建议在生产环境中使用。

===== 高级方案
如果环境很复杂且需要进一步设置，则必须手动创建Kerberos配置文件，并在连接器的连接配置中引用它。

以下参数适用于高级方案：

*  *Login Properties File Path*：自定义登录属性文件的路径。 Kerberos登录模块（Krb5LoginModule）可以通过定义JAAS来调整特定于场景的配置
登录配置文件。未指定时，将设置通常适用于大多数情况的默认值。有2个选项可用于设置此属性：
-	将文件放在类路径中（通常在src / main / resources下），并将该属性的值设置为classpath：jaas.conf。
-	如C：\ kerberos \ jaas.conf中提供文件的完整路径。
*  *Kerberos Properties File path*：自定义Kerberos属性文件的路径。有2个选项可用于设置此属性：
-	将文件放在类路径中（通常在src / main / resources下），并将该属性的值设置为classpath：krb5.conf。
-	如C：\ kerberos \ krb5.conf中提供文件的完整路径。

.JAAS登录配置文件
以下是Kerberos登录模块的JAAS登录配置文件示例：
-----------------
Kerberos {
    com.sun.security.auth.module.Krb5LoginModule required
    debug=true
    refreshKrb5Config=true;
};
-----------------

有关如何为Kerberos登录模块创建JAAS登录配置文件的更多信息，请访问：http：//docs.oracle.com/javase/7/docs/jre/api/security/jaas/spec/com/sun/安全/认证/模块/ Krb5LoginModule.html_

。Kerberos配置文件
以下是Kerberos配置文件内容的示例：
---------------------
[libdefaults]
default_realm = MYREALM.COM

[realms]
MYREALM.COM = {
 kdc = mydomaincontroller.myrealm.com
 default_domain = MYREALM.COM
}

[domain_realm]
.myrealm.com = MYREALM.COM
myrealm.com = MYREALM.COM
---------------------

警告：realm / default_domain区分大小写，并且必须完全按Active Directory中的定义进行指定。在测试连接期间接收到错误，指出"Message stream modified (41)"
表明域名的格式不正确。

有关如何创建Kerberos配置文件的更多信息，请参阅_http：//web.mit.edu/kerberos/krb5-devel/doc/admin/conf_files/krb5_conf.html_

====  Okta身份验证

配置连接器以使用Okta认证需要以下信息：

*  *Okta domain*：接受okta用户名和密码进行认证的Okta端点：your-domain.okta.com
*  *Okta username*：您的Okta用户名：your-email@example.com
*  *Okta username*：您的Okta密码
*  *Okta API token*：Okta在滑动缩放到期时使用不记名令牌进行API身份验证。参考资料：http：//developer.okta.com/docs/api/getting_started/getting_a_token.html
*  *Sharepoint Online embedded link*：Okta的Microsoft Office 365 SharePoint Online应用程序的链接。例如：https：//your-domain.okta.com/home/office365/0oa14mz7f4HAWypdZ1t7/31737

=== 安全令牌验证

如果无法根据用户名和密码配置连接，或者需要使用自定义安全令牌服务（STS）进行身份验证（不同于支持的服务），则`Security Token Connection`设置可让您提供您从自定义STS获得的安全令牌。此配置要求您设置以下信息以用于身份验证：

*  *Security Token* :(可选）包含从您的STS获得的安全令牌（即完整的XML文档）的字符串，用于验证与Sharepoint实例的连接。如果您未在此设置中配置安全令牌，则需要提供以下详细说明的高级部分设置中定义的`Security Token Provider`。
*  *Instance Type*：指示连接器是否应对本地或在线实例进行身份验证，因为每个连接器都提供不同的端点和方法来附加安全令牌并对连接进行身份验证。

除了上面显示的基本配置之外，还有一个高级设置，您可以在其中提供您自己的`Security Token Provider`实例。此机制允许您使用自定义实现获取安全令牌，并允许连接器在令牌过期时刷新连接（当仅提供`Security Token`作为XML文档时，情况并非如此）。

*  *Security Token Provider* :(可选）引用Spring bean的字符串，它应该是实现`org.mule.module.sharepoint.connection.providers.SecurityTokenProvider`接口的类。在实现中，每当连接器请求安全令牌时，您都有责任提供安全令牌。为了将您自己的实现作为Spring bean提供引用，请参阅以下 link:/mule-user-guide/v/3.8/using-spring-beans-as-flow-components[文件]。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 配置您的第一个流程

配置：

. 在Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 点击*Global Elements*标签。
. 点击*Create*。
. 在*Search*文本框中，键入*sharepont*。
. 点击*Microsoft SharePoint*，然后点击*OK*。
. 选择全局类型来配置：
+
image:WindowsGlobalTypes.png[WindowsGlobalTypes]
+
. 传统连接：
.. 填写*Username*，*Password*和*Site URL*。
.. 对于认证：
* 如果使用自签名SSL证书，并点击*Disable SSL certificate validation*复选框。
* 要与声明验证连接，请填写STS URL（安全令牌服务）和范围（依赖方标识符）。 STS URL必须指向STS的端点，该端点接受用户名和密码作为认证凭证并理解WS-Trust 1.3标准。在ADFS中，端点通常是`+https://myadfs.com/adfs/services/trust/13/usernamemixed+`。此外，端点必须在ADFS中启用（默认情况下启用）。
* 要连接NTLM身份验证，请填写*Domain*。
* 要连接到SharePoint Online，请将NTLM和声明输入留空。只需指定一个*Username*，*Password*和*Site URL*。
+
.. 点击*Test Connection*以确保连接正常工作：
+
image:SPGlobalElementProps.png[SPGlobalElementProps]

其他连接类型需要类似的信息。

*Note*：Pooling Profile，重新连接和Notes标签可以被忽略。这些由Studio提供并包含默认信息。

=== 创建Anypoint Studio流程

创建Anypoint Studio流程：

. 从Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 在搜索框中，键入*http*并将*HTTP Connector*拖到画布上。
. 在搜索框中，键入*sharepoint*，然后将HTTP连接器旁边的Microsoft SharePoint连接器实例拖出。
. 在搜索框中，键入*json*并在Microsoft SharePoint连接器旁边拖动一个*Object to JSON*转换器。
+
image:SPMuleFlow.png[SPMuleFlow]
+
. 双击HTTP连接器。确保*Host*设置为*localhost*，*Port*设置为*8081*。将*Path*设置为*query*。点击*OK*。
. 双击Microsoft SharePoint连接器并单击绿色加号。
. 更新以下配置值：+
.. 从连接器配置列表中，单击先前创建的*Microsoft SharePoint*配置。
.. 从“操作”列表中，单击*List query*。
+
*Note*：*List query*选项只有在成功连接到SharePoint实例后才会显示在“操作”列表中。
+
.. 从语言列表中，点击*DataSense Query Language*。
. 单击查询生成器：+
.. 从类型列表中，点击*Documents*。
.. 从字段列表中，点击*ID*和*Title*。
.. 从订单方式，点击*Title*。
.. 从方向，点击*DESCENDING*。
+
image:MSSPQueryBuilder.png[MSSPQueryBuilder]

== 运行流程

. 在包资源管理器中，右键单击sharepoint2013-demo并选择*Run As > Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+
[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'sharepoint2013-demo'                        +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----
+
. 打开Internet浏览器并访问http：// localhost：8081 / query。
. 文档列表按降序标题排序，并以JSON格式返回（结果因SharePoint 2013实例而异）。
+
[source, code, linenums]
----
[{"__metadata":{"id":"Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","uri":"https://ec2-54-200-49-206.us-west-
2.compute.amazonaws.com/_api/Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","etag":"\"1\"","type":"SP.Data.Shared_x0020_Document
sItem"},"Id":4,"ID":4,"Title":"folder"}]
----

== 操作：列出和列出项目API

使用列表和列表项API创建，检索，更新和删除SharePoint列表和列表项。

=== 创建，更新和删除列表项目

创建或更新项目时，请指定列表ID。指定ID后，DataSense将提取列表的元数据，而对象构建器会显示可以完成的每个字段：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title">
  <sharepoint-2013:list ref="#[payload]"/> 
</sharepoint-2013:list-create>
----

或者在连接器本身中定义属性：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title">
  <sharepoint-2013:list contentTypesEnabled="true" description="Description"/>
</sharepoint-2013:list-create>
----

为了检索和删除列表，只有列表ID是必需的：

[source, xml]
----
<sharepoint-2013:list-delete config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" listId="8e306633-c600-40ab-80db-80f57968c0a1" />
----

=== 创建，更新和删除列表项目

创建或更新项目时，请指定一个列表ID。 DataSense使用列表ID来获取列表的元数据。对象生成器提供您需要完成的字段。

image:MSSPObjectBuilder.png[MSSPObjectBuilder]

=== 查询列表项目

使用查询生成器：

在左侧面板上，出现每个未隐藏的列表。在右侧面板上，出现所选列表的字段。如果该字段为*Lookup Field*，则字段类型为`SharepointListReference`或`SharepointListMultiValueReference`。

image:SPQueryBuilder.png[SPQueryBuilder]

如果选择这些字段中的任何一个以便由查询返回，则根据*Retrieve full objects for reference fields*复选框的值，可以使用两种类型的返回对象：

*  *not checked*：包含参考对象ID和参考对象列表ID的摘要对象：
+
[source, json, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "id": "1",
        "lookupListId": "aaaa-1111-bbbb-2222"
    },
    "MultiValueLookupFieldId": {
        "ids": [
            1,
            2,
            3
        ],
        "lookupListId": "cccc-3333-dddd-4444"
    }
}
----
+
稍后可以在另一个连接器中使用此对象来检索引用的对象
连同一个for-each组件：
+
image:MSSPListItemQuery.png[MSSPListItemQuery]
+
*  *checked*。检索完整的对象图。如果有循环，则汇总参考对象显示：
+
[source, json, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "Title": "Another title",
        "Id": "1",
        "Property1": "A value"
    },
    "MultiValueLookupFieldId": [
        {
            "Title": "Another title",
            "Id": "1",
            "Property1": "A value"
        },
        {
            "Title": "Another title",
            "Id": "2",
            "Property1": "A value"
        }
    ]
}
----

示例*Query Text*：

image:SPExampleQText.png[SPExampleQText]

*Note:*选中此选项可能会导致包含许多参考字段的大型项目列表需要很长时间才能检索。

从此连接器的2.1.10版开始，您可以在DSQL查询中使用_internal_或_title_字段名称（以及其他列表的操作，如下所述）。

例如对于以前的查询：

[source]
----
SELECT AuthorId, Created, List3MultiId FROM 8e306633-c600-40ab-80db-80f57968c0a1
----

如果_titles_分别为以下_Author_，_Date created_和_Details_，则可以使用字段名称来编写查询：

[source]
----
SELECT Author, 'Date created', Details FROM Inventory
----

以及你可以混合_internal_和_title_：

[source]
----
SELECT AuthorId, 'Date created', List3MultiId FROM Inventory
----

仅在以下列表操作中支持使用_internal_和/或_title_字段名称：

- 将新项目添加到列表中
- 更新列表中的现有项目
- 查询列表中的项目

*Note:*要按日期时间字段类型进行过滤，请在DSQL子句中指定时使用ISO-8601格式写入值（例如，Created> 2000-01-01T00：00：00-03：00）。

== 操作：文件和文件夹API

使用文件和文件夹API，您可以创建，检索，更新和删除文件和文件夹，还可以检入，检出，发布，批准，拒绝，复制和回收文件列表中的文件。

使用文件夹操作时，服务器的相对URL指的是文件夹的位置或位置。 URL的格式可以是_ / site / docList / innerFolder_或_docList / innerFolder_格式。在第二种情况下，使用连接器的配置站点URL参数中指定的站点。

使用文件操作时，文件服务器相对URL指文件夹服务器相对URL加上文件名：_ / site / docList / innerFolder / filename_或_docList / innerFolder / filename_。

=== 创建和删除文件夹

您可以通过指定文件夹所在的服务器相对URL或您计划创建文件夹的位置来创建或删除文件夹。

结果流看起来：

[source, xml, linenums]
----
<sharepoint-2013:folder-create config-ref="Sharepoint_2013" 
url="/path/to/folder" doc:name="Sharepoint 2013"/>

<sharepoint-2013:folder-delete config-ref="Sharepoint_2013" 
url="/path/to/folder" doc:name="Sharepoint 2013"/>
----

=== 添加文件

可以通过选择物理文件或将输入流传递到连接器来上传文件，并将其上载到指定的服务器相关URL。例如，您可以将其与文件连接器一起用于将文件上传到列表。

使用输入流：

[source, xml, linenums]
----
<sharepoint-2013:file-add config-ref="Sharepoint_2013" 
fileServerRelativeUrl="/path/to/folder/filename" 
fileContentStream-ref="#[payload]" overwrite="true" 
doc:name="Sharepoint 2013"/>
----

为了上传大文件，您需要配置Sharepoint和IIS服务器：

- 在站点的SP管理控制台上将“最大上传大小”设置为2047MB（最大）。
- 将IIS站点的连接超时设置为较高值。
- 为IIS应用程序（在请求筛选时）将“允许的最大内容长度”设置为2147483647。

注意：Sharepoint REST API（连接器使用）支持将文件上传至2GB。处理大文件时，建议提供文件的系统本地路径（_localFilePath_参数的值），因为这是通过连接器上载它的最有效方式。

=== 获取文件内容

文件内容以字节数组的形式返回。例如，您可以将其用作文件连接器的输入以从列表中下载文件：

[source, xml, linenums]
----
<sharepoint-2013:file-get-content config-ref="Sharepoint_2013" 
doc:name="Sharepoint 2013" 
fileServerRelativeUrl="/path/to/folder/filename"/>
----

=== 查询文件和文件夹

此操作从指定的文件夹开始返回所有符合指定条件的文件和文件夹。

使用查询生成器：

* 在左侧面板上，出现SharePoint实例的文档列表。所选实例用作查询文件和文件夹的开始路径的一部分。
* 在右侧面板上，为每个文档列表显示相同的字段。
* 另外，您可以在_Folder Path_输入中指定一个或多个内部文件夹作为开始路径。
* 选择递归复选框时，会在起始路径的每个文件夹中递归搜索文件和文件夹。

设置查询生成器选项：

image:SharePointFolderPath.png[SharePointFolderPath]

例：

[source, code, linenums]
----
sharepoint-2013:file-query config-ref="Sharepoint_2013" query="dsql:SELECT Author,ModifiedBy,Name,ServerRelativeUrl FROM #[header:inbound:documentListName]" recursive="true" doc:name="Sharepoint 2013"/>
 
<sharepoint-2013:folder-query config-ref="Sharepoint_2013" recursive="true" query="dsql:SELECT ItemCount,Name,ServerRelativeUrl FROM #[header:inbound:documentListName] WHERE ItemCount &gt; 0" doc:name="Sharepoint 2013"/>
----

=== 其他文件操作

批准，签入，签出，拒绝，发布，撤消签出和取消发布，都与使用非常相似。指定文件URL，并在某些情况下将其他评论作为参数传递。

[source, xml, linenums]
----
<sharepoint-2013:file-publish config-ref="Sharepoint_2013" 
doc:name="Sharepoint 2013" fileServerRelativeUrl="" comment=""/>
----

=== 设置文件元数据

您可以使用*Update List Item*操作获取并设置上传到文档库的文件的元数据。

要设置列表中文件的属性，您必须知道*List Item Id*。这可以使用延迟的*ListItemAllFields*属性进行检索。

以下流程说明了*File Add*如何直接链接到*Update List Item*操作以将文件上载到列表并在以下位置立即设置元数据：

[source, xml, linenums]
----
<flow name="sharepoint_demo_fileAddWithMetadata"
   doc:name="sharepoint_demo_fileAddWithMetadata">
   <http:inbound-endpoint exchange-pattern="request-response" host="localhost"
     port="8081" path="upload" doc:name="HTTP"/>
   <sharepoint:file-add config-ref="Sharepoint" 
     fileServerRelativeUrl="/Shared Documents/myfile.txt" 
     overwrite="true" 
     doc:name="Add file"/>
   <sharepoint:resolve-object config-ref="Sharepoint" 
     doc:name="Get ListItemId of File" 
     url="#[payload.listItemAllFields.__deferred.uri]"/>
   <sharepoint:list-item-update config-ref="Sharepoint" itemId="#[payload.Id]"
     listId="ccbfaf65-b53e-48ac-be19-adf45192ecc3" doc:name="Set file properties">
       <sharepoint:updated-properties>
           <sharepoint:updated-property key="Title">Test title</sharepoint:updated-property>
       </sharepoint:updated-properties>
   </sharepoint:list-item-update>
   <set-payload value="OK" doc:name="Set Payload"/>
</flow>
----

== 解决延期属性

出于性能原因，许多SharePoint操作会返回实体的基本数据集以及一个或多个可用于检索其他详细信息或相关对象的延迟属性引用。

您可以使用通用的*Resolve object*或*Resolve collection*操作来解决设置为单个`Map<string,object>`或`List<Map<string,object>>`的延迟属性，并访问流中的此信息。

例如，该技术可以获取SharePoint File对象的全部字段：

[source, xml, linenums]
----
<sharepoint:resolve-object config-ref="SharePoint" 
  url="#[payload.listItemAllFields.__deferred.url]" 
  doc:name="Microsoft SharePoint" >
</sharepoint:resolve-object>
----

使用Mule Debugger或Logger组件记录有效负载，可以使用`_deferred` URL属性标识属性。

== 将文件附加到列表项

要将文件附加到列表项目，请使用ResolveObject操作，如下例所示：

[source, xml, linenums]
----
<flow name="sp-testFlow2">
    <http:listener config-ref="HTTP_Listener_Configuration" path="/at" doc:name="HTTP"/>
    <set-variable variableName="FileNameToAttach" value="CHANGELOG.md" doc:name="Set FileNameToAttach"/>
    <sharepoint:list-item-query config-ref="Microsoft_SharePoint__NTLM_Connection" query="dsql:SELECT ID,Title FROM 82b2a455-3faf-4162-8276-63a1093fcc7e WHERE Title = 'test-list-item-1'" doc:name="Read List Item"/>
    <set-variable variableName="ListItemUrl" value="#[payload.next() .__metadata.uri]" doc:name="SetListItemUri from list item query result"/>
    <set-payload value="#[groovy:new FileInputStream('C:\\temp\\' + flowVars.FileNameToAttach)]" doc:name="Set file to attach as inputstream in payload"/>
    <sharepoint:resolve-object config-ref="Microsoft_SharePoint__NTLM_Connection" url="#[flowVars.ListItemUrl]/AttachmentFiles/add(FileName='#[flowVars.FileNameToAttach]')" resolveRequestType="Create" doc:name="create attachment"/>
    <json:object-to-json-transformer doc:name="Object to JSON"/>
</flow>
----

流程显示如何：

. 从SharePoint读取列表项URI。如果您已经拥有该列表项目，因为它是在同一个流程中创建的，则可以使用该项目。
. 将文件读入输入流。这里是从c：\ temp（找到流中的路径来替换它）。
. 用该文件创建列表项目附件。

== 针对REST API执行直接调用

SharePoint REST API允许通过*Resolve object*和*Resolve collection*动作访问大量命令。这些操作提供了对指定URL的认证调用，并分别解析为Map和`List<Map>`。

*Resolve object*操作接受所有HTTP动词（GET，POST，PUT / MERGE，DELETE），并允许将请求中的正文发送给API。主体的默认值是Mule消息的有效载荷。

正文可以用于接受JSON的API端点：

*  `Map<String, Object>`被转换为JSON字符串。
包含JSON的*  `String`。该字符串按原样发送。

对于接受文件的API端点：

*  `InputStream`与文件。该流在使用后关闭。
*  `byte[]`与文件。该字节数组按原样发送。

== 使用具有多个值的选择列类型

您可以配置选择列类型以允许多个值。 Studio中用于接受多个值的列的元数据如下所示：

image:SharePointChoiceMultiSelect.png[SharePointChoiceMultiSelect]

假设SharePoint中的目标列表具有Title属性和一个名为ChoiceMultiSelect的多选列，它接受值`"one"`，`"two"`或`"three"`，则以下Groovy脚本会构造一个有效内容选择`"one", "three"`：

[source, code]
----
[Title: "foo", ChoiceMultiSelect: [results: ["one", "three"]]]
----

可以为多选列结果属性构造`List<string>`的任何语言都可以用于类似的效果。

这段伪代码演示了如何将Choice＃1和Choice＃2设置为ChoiceMultiSelect列的值：

[source, code, linenums]
----
values = new List<String>
values.add("Choice #1")
values.add("Choice #2")
multiValuesMap = new Map<String, Object>
multiValuesMap["results"] = values
List-item["ChoiceMultiSelect"] = multiValuesMap
----

== 异常处理

连接时发生=== 异常

如果连接器因任何原因无法与SharePoint实例连接，则会抛出ConnectionException类型的异常。

异常消息有助于调试异常的原因。

操作中的=== 异常

如果在执行操作时发生错误，则会引发SharepointException并显示有关错误的消息。

== 常见问题

=== 此连接器支持哪些版本的SharePoint？

SharePoint连接器支持SharePoint 2013本地和SharePoint联机版本。

=== 连接器支持哪些认证方案？

针对本地SharePoint实例进行身份验证的选项包括声明身份验证（ADFS）和NTLM。对于SharePoint Online，支持使用标准SharePoint联机用户凭据进行身份验证。

=== 连接器可以访问SharePoint对象模型的哪些部分？

提供了对文件和文件夹，列表，ListItems和附件的特定支持。此外，可以通过ResolveObject和ResolveCollection操作以JSON形式访问SharePoint API的所有其他实体。

=== 此连接器是否支持DataSense和DataMapper？

是的，所有受支持的实体和实体属性都由连接器向Studio公开，以便与DataMapper一起使用。

=== 我可以使用连接器执行哪些操作？

对于列表和ListItems API，支持的操作包括创建，检索，更新和删除。对于文件和文件夹，操作包括添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝，回收和复制。

=== 是否有任何示例显示如何使用连接器？

是的，Anypoint Studio的示例项目可在 link:_attachments/sharepoint-connector-samples.zip[sharepoint-connector-samples.zip]中免费获取。

=== 我可以在此连接器上使用哪些Mule版本？

任何运行在任何操作系统和位上的企业版Anypoint平台都支持此连接器，包括CloudHub集成PaaS。

== 另请参阅

*  link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达语言（MEL）]
*  link:/mule-user-guide/v/3.8/endpoint-configuration-reference[配置端点]
*  link:/mule-user-guide/v/3.8/transformers[工作室变形金刚]
*  link:/mule-user-guide/v/3.8/flow-reference-component-reference[流量参考]
